implemented step 4 in algorithm
untested/code could use some clean up

--- a/cycle-roll.cabal
+++ b/cycle-roll.cabal
@@ -22,9 +22,9 @@ library
   hs-source-dirs:   src
   exposed-modules:  
     Data.CycleRoll,
-    Data.CycleRoll.LCP
-  other-modules:    
-    Data.CycleRoll.SuffixArray
+    Data.CycleRoll.LCP,
+    Data.CycleRoll.SuffixArray,
+    Data.CycleRoll.Sequence
   build-depends:    
     base,
     containers,
