use Heap instead of list for lcpGroupSequences
within a given group, sequences should be ordered by offset

--- a/cycle-roll.cabal
+++ b/cycle-roll.cabal
@@ -24,7 +24,8 @@ library
     Data.CycleRoll,
     Data.CycleRoll.LCP,
     Data.CycleRoll.SuffixArray,
-    Data.CycleRoll.Sequence
+    Data.CycleRoll.Sequence,
+    Data.CycleRoll.Util
   build-depends:    
     base,
     containers,
