added CycleRoll.roll function
greedy algorithm which gives precedence to largest sequences
found, but does not search for the minimal representation.

attempts to add nested sequences to top level sequences, but that
part doesnt seem to be working right now

--- a/cycle-roll.cabal
+++ b/cycle-roll.cabal
@@ -32,7 +32,8 @@ library
     heaps,
     vector,
     vector-algorithms,
-    suffixarray
+    suffixarray,
+    IntervalMap
   ghc-options:      
     -Wall
     -O2
@@ -44,9 +45,11 @@ test-suite tests
   build-depends:    
     base,
     containers,
+    heaps,
     vector,
     vector-algorithms,
     suffixarray,
+    IntervalMap,
     HUnit,
     QuickCheck,
     test-framework,
