factored RSeqNode out of CycleRoll into its own module

--- a/cycle-roll.cabal
+++ b/cycle-roll.cabal
@@ -25,7 +25,8 @@ library
     Data.CycleRoll.LCP,
     Data.CycleRoll.SuffixArray,
     Data.CycleRoll.Sequence,
-    Data.CycleRoll.Util
+    Data.CycleRoll.Util,
+    Data.CycleRoll.RSeqNode
   build-depends:    
     base,
     containers,
