fix versions on vector and IntervalMap
fixes compile errors

--- a/cycle-roll.cabal
+++ b/cycle-roll.cabal
@@ -15,9 +15,9 @@ executable cycle-roll
     base,
     containers,
     heaps,
-    vector,
+    vector == 0.7.1,
     suffixarray,
-    IntervalMap,
+    IntervalMap == 0.3.0.3,
     rangemin,
     pipes,
     primitive
@@ -31,9 +31,9 @@ executable show-cycle-elements
     base,
     containers,
     heaps,
-    vector,
+    vector == 0.7.1,
     suffixarray,
-    IntervalMap,
+    IntervalMap == 0.3.0.3,
     rangemin,
     pipes,
     primitive
@@ -58,9 +58,9 @@ library
     base,
     containers,
     heaps,
-    vector,
+    vector == 0.7.1,
     suffixarray,
-    IntervalMap,
+    IntervalMap == 0.3.0.3,
     rangemin,
     pipes,
     primitive
@@ -76,9 +76,9 @@ test-suite tests
     base,
     containers,
     heaps,
-    vector,
+    vector == 0.7.1,
     suffixarray,
-    IntervalMap,
+    IntervalMap == 0.3.0.3,
     rangemin,
     pipes,
     primitive,
